<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_check_info_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/tv_check_info_explain"
            android:textAppearance="@style/TextAppearance.UniVoice.title2Semi"
            android:textColor="@color/font_B01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_check_info_wait"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_check_info_wait"
            android:textAppearance="@style/TextAppearance.UniVoice.body2Regular"
            android:textColor="@color/font_B01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_check_info_explain" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:src="@drawable/ic_uni_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_check_info_wait" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_check_info_start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_mint400_fill_40_rect"
            android:paddingVertical="19dp"
            android:text="@string/btn_check_info_start"
            android:textAppearance="@style/TextAppearance.UniVoice.title4Bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
